<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome"
    >

    <ImageView
        android:id="@+id/register_applogo"
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:src="@drawable/applogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"/>
    <TextView
        android:id="@+id/app_slogan_register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="100dp"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="@color/txtColor"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="157dp" />

    <EditText
        android:id="@+id/CurrentPassword"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_slogan_register"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/input_design"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/NewPassword"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CurrentPassword"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/input_design"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ConfirmNewPassword"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/NewPassword"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/input_design"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ConfirmNewPassword"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="27dp"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="350dp"
        android:layout_height="26dp"
        android:layout_below="@+id/ConfirmNewPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="180dp"
        android:text="@string/show_password" />

    <Switch
        android:id="@+id/language_sw"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="15dp"
        android:text="@string/language" />

</RelativeLayout>