<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/register_applogo"
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:src="@drawable/applogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"/>

    <TextView
        android:id="@+id/app_slogan_register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="100dp"
        android:text="@string/parts_crib"
        android:textAlignment="center"
        android:textColor="@color/txtColor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="157dp" />



    <EditText
        android:id="@+id/register_FName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_slogan_register"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/first_name"
        android:textColorHint="@color/black"
        android:inputType="textShortMessage"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/register_LName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_FName"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="6dp"
        android:hint="@string/last_name"
        android:textColorHint="@color/black"
        android:inputType="textShortMessage"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/register_student_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_LName"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="6dp"
        android:hint="@string/student_number"
        android:textColorHint="@color/black"
        android:inputType="textShortMessage"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/register_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_student_number_input"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="6dp"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/register_confirm_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password_input"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="6dp"
        android:hint="@string/confirm"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/register_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_confirm_password_input"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="6dp"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_email_input"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="27dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/create_account"
        android:textColor="@android:color/black"
        />

</RelativeLayout>